# vibecode-youtube-downloader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: plan.md
src/yt_downloader/: __init__.py  main.py
src/yt_downloader/api/: http.py  ws.py
src/yt_downloader/core/: config.py  logging.py  logging_cfg.py
src/yt_downloader/domain/: jobs.py  probe.py
src/yt_downloader/infra/: fs.py
src/yt_downloader/services/: downloader.py  probe.py  ytdlp_options.py
src/yt_downloader/ui/static/: app.js
src/yt_downloader/ui/templates/: index.html
tests/: __init__.py  test_downloader_helpers.py  test_fs.py  test_integration.py  test_integration_extra.py  test_job_manager.py  test_ws.py
